--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,15 +24,25 @@ layout: default
 
 <div id="post">
   <header class="post-header">
-    <h1 title="{{ page.title }}">{{ page.title }}</h1>
-    <span class="post-meta">
+    <p class="post-meta">
       <span class="post-date">
         {{ page.date | date: "%-d %b %Y" | upcase }}
       </span>
+      {% if page.categories.size > 0 %}
       •
-      {% include read_time.html %}
-    </span>
-
+      {% for cat in page.categories %}
+        <a class="post-cat" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
+        {% unless forloop.last %}
+        <span>/</span>
+        {% endunless %}
+      {% endfor %}
+      {% endif %}
+    </p>
+    <h1 title="{{ page.title }}">{{ page.title }}
+    {% if page.link %}
+      <a class="post-title-link" href="{{ page.link }}" target="_blank" title="{{ page.title }}"><i class="fa fa-external-link"></i></a>
+      {% endif %}
+    </h1>    
   </header>
 
   <article class="post-content">
