--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
     </p>
     <h1 title="{{ page.title }}">{{ page.title }}
     {% if page.link %}
-      <a class="post-title-link" href="{{ page.link }}" target="_blank" title="{{ page.title }}"><i class="fa fa-external-link"></i></a>
+      <a class="page-title-link" href="{{ page.link }}" target="_blank" title="{{ page.title }}"><i class="fa fa-external-link"></i></a>
       {% endif %}
     </h1>    
   </header>
